--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -37,16 +37,6 @@
 	keywords = {reference architecture, software architecture}
 }
 
-@article{ieee_2000,
-	author= {IEEE},
-	title = {{IEEE} Recommended Practice for Architectural Description of Software-Intensive Systems},
-	doi = {10.1109/IEEESTD.2000.91944},
-	abstract = {This recommended practice addresses the activities of the creation, analysis, and sustainment of architectures of software-intensive systems, and the recording of such architectures in terms of architectural descriptions . A conceptual framework for architectural description is established. The content of an architectural description is defined. Annexes provide the rationale for key concepts and terminology, the relationships to other standards, and examples of usage.},
-	pages = {i--23},
-	journaltitle = {{IEEE} Std 1471-2000},
-	year = {2000},
-	keywords = {architectural description, architecture, software-intensive system, stakeholder con-cerns, system stakeholder, view, viewpoint}
-}
 
 @inproceedings{may2005survey,
   title={A survey of software architecture viewpoint models},
@@ -67,7 +57,6 @@
  location = {Orlando, Florida, USA},
  pages = {117--120},
  numpages = {4},
- url = {http://doi.acm.org/10.1145/288408.288438},
  doi = {10.1145/288408.288438},
  acmid = {288438},
  publisher = {ACM},
@@ -138,7 +127,48 @@ month={Sept}
  keywords = {software architecture, software design, software engineering}
 } 
 
+@inproceedings{krutchen1995,
+	author = {Kruchten, Philippe},
+	title = {Architectural Blueprints—The “4+1” View
+Model of Software Architecture},
+	publisher = {IEEE},
+	pages = {42--50},
+	year = {1995}
+}
+
+@book{Clements:2002:DSA:599933,
+ author = {Clements, Paul and Garlan, David and Bass, Len and Stafford, Judith and Nord, Robert and Ivers, James and Little, Reed},
+ title = {Documenting Software Architectures: Views and Beyond},
+ year = {2002},
+ isbn = {0201703726},
+ publisher = {Pearson Education}
+} 
+
 % standardit
+
+@article{ieee_2000,
+	author= {IEEE},
+	title = {{IEEE} Recommended Practice for Architectural Description of Software-Intensive Systems},
+	doi = {10.1109/IEEESTD.2000.91944},
+	abstract = {This recommended practice addresses the activities of the creation, analysis, and sustainment of architectures of software-intensive systems, and the recording of such architectures in terms of architectural descriptions . A conceptual framework for architectural description is established. The content of an architectural description is defined. Annexes provide the rationale for key concepts and terminology, the relationships to other standards, and examples of usage.},
+	pages = {i--23},
+	journaltitle = {{IEEE} Std 1471-2000},
+	year = {2000},
+	keywords = {architectural description, architecture, software-intensive system, stakeholder con-cerns, system stakeholder, view, viewpoint}
+}
+
+
+@ARTICLE{ISOIEEE42010, 
+author = {{ISO/IEC/IEEE}},
+journal={ISO/IEC/IEEE 42010:2011}, 
+title={ISO/IEC/IEEE Systems and software engineering -- Architecture description}, 
+year={2011}, 
+pages={1-46}, 
+keywords={Computer architecture;IEEE standards;Software engineering;IEEE 42010;architecting;architecture decision;architecture description;architecture description language;architecture framework;architecture model;architecture rationale;architecture view;architecture viewpoint;correspondence;correspondence rule;system concern}, 
+doi={10.1109/IEEESTD.2011.6129467}, 
+month={Dec}
+
+}
 
 @article{ISO/IEC25010:2011,
 	title={ISO/IEC 25010:2011 Systems and software engineering -- Systems and software Quality Requirements and Evaluation (SQuaRE) -- System and software quality models},
